--- a/exported.7.html
+++ b/exported.7.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #1e1e2f;
+      background: #FFFFFF;
       color: #f0f0f0;
     }
     header {
